# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: local.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
