[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4"

# https://rustsec.org/advisories/RUSTSEC-2023-0001
tokio = { version = ">=1.18.4, <1.19.0", features = [
    "macros",
    "rt-multi-thread",
] }

serde = { version = "1", features = ["derive"] }
serde-aux = "3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
unicode-segmentation = "1"

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

secrecy = { version = "0.8", features = ["serde"] }
validator = "0.16.0"


[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
claim = "0.5"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
